[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Player/animation/animation package-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Actors/Player/Character/Character.gd" type="Script" id=2]
[ext_resource path="res://Shader/smooth_pixel.tres" type="Material" id=3]
[ext_resource path="res://Actors/Player/Character/Character.movement.gd" type="Script" id=4]
[ext_resource path="res://Actors/Player/Character/CameraAnchor.gd" type="Script" id=5]

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -99 ), 0.0, 1380.0, 0, 0, Vector2( 1, 117 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.36
emission_shape = 1
emission_sphere_radius = 0.5
flag_disable_z = true
direction = Vector3( -1, -3, 0 )
spread = 16.1
gravity = Vector3( 0, 9.5, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.5
angular_velocity = 2.84
angular_velocity_curve = SubResource( 2 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color = Color( 0.152941, 0.184314, 0.243137, 1 )
hue_variation = -1.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 6 )

[sub_resource type="Animation" id=5]
resource_name = "CrouchIdle_Anim"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 47 ]
}

[sub_resource type="Animation" id=6]
length = 0.525
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41, 42, 43, 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=10]
resource_name = "SpinUp_Anim"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=11]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 35, 36 ]
}

[sub_resource type="Animation" id=12]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "tocourch_anim_end"
} ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 3, 12 )

[node name="Character" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -14.0 ]
}

[node name="CameraAnchor" type="Position2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
script = ExtResource( 5 )
__meta__ = {
"_gizmo_extents_": 1.0
}

[node name="Camera2D" type="Camera2D" parent="CameraAnchor"]
material = ExtResource( 3 )
scale = Vector2( 100000, 100000 )
current = true
zoom = Vector2( 0.2, 0.2 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="CharacterMovement" type="Node" parent="."]
script = ExtResource( 4 )
jump_force = 225
double_jump_force = 200

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -4, 12 )
amount = 50
lifetime = 2.0
speed_scale = 1.5
local_coords = false
draw_order = 1
process_material = SubResource( 3 )

[node name="Trigger" type="Area2D" parent="."]
position = Vector2( 0, 6 )
collision_mask = 8

[node name="TriggerBox" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CrouchIdle_Anim = SubResource( 5 )
anims/DoubleJump_Anim = SubResource( 6 )
anims/Fall_Anim = SubResource( 7 )
anims/Idle_Anim = SubResource( 8 )
anims/Run_Anim = SubResource( 9 )
anims/SpinUp_Anim = SubResource( 10 )
anims/Up_Anim = SubResource( 11 )
anims/toCrouch_Anim = SubResource( 12 )

[node name="AnimSpriteSheet" type="Sprite" parent="."]
material = ExtResource( 3 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 7
vframes = 7
frame = 47

[node name="Standing_Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[connection signal="area_entered" from="Trigger" to="." method="_spring_area_entered"]
